✨ Add bulk lecture creation API
In this commit, we've added the ability for users to create multiple lectures at once. This is accomplished by creating a new method (createLectureBulk) within LectureService.ts which accepts a LectureBulkCreateRequest object to handle multiple requests simultaneously. Corresponding changes are made in OpenAPI-Specification.json, LectureController.ts, and RouteConfig.ts to handle these bulk creation requests.

Bulk creation is useful when a large number of lectures have to be added at once, improving usability and efficiency without having the users perform repetitive tasks.
