# src/main/common/config/RouteConfig.ts
@@ -16,6 +16,7 @@ export const configureRoutes = (app: Application): void => {
   // lecture
   app.post('/api/lectures', withAsync(lectureController.createLecture.bind(lectureController)));
   app.get('/api/lectures', withAsync(lectureController.listLecture.bind(lectureController)));
+  app.post('/api/lectures/bulk', withAsync(lectureController.createLectureBulk.bind(lectureController)));
 };
 
 type asyncRouterFunction = (
